add menu_value and report id fields to the tables
