# app/models/platform.py
@@ -10,4 +10,5 @@ class Platform(ModelMixin):
     status_date = db.Column(db.String, default=db.func.current_timestamp())
     category_id = db.Column(db.Integer, db.ForeignKey('category.id'), nullable=False)
     status = db.Column(db.Boolean, nullable=True)
-
+    report_id = db.Column(db.String(256), nullable=True)
+    menu_value = db.Column(db.Integer, nullable=True)
